--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,10 @@
 site_name: Mitsuhaの学习笔记
+
+nav:
+  - '首页': 'index.md'
+  - '笔记':
+    - 'cvr预估': 'notes/cvr-prediction.md'
+
 theme:
   name: material
   language: zh
@@ -6,5 +12,44 @@ theme:
     primary: green
     accent: blue
      # Palette toggle for light mode
+  features:
+    - navigation.tabs
+    - navigation.top # 一键回顶部
     
-  
+use_directory_urls: false
+
+markdown_extensions:
+  - admonition  # 提示块
+  - footnotes  # 脚注
+  - meta  # 定义元数据，通过文章上下文控制，如disqus
+  - pymdownx.caret  # 下划线上标
+  - pymdownx.tilde  # 删除线下标
+  - pymdownx.critic  # 增加删除修改高亮注释，可修饰行内或段落
+  - pymdownx.details  # 提示块可折叠
+  - pymdownx.inlinehilite  # 行内代码高亮
+  - pymdownx.mark  # 文本高亮
+  - pymdownx.smartsymbols  # 符号转换
+  - pymdownx.superfences  # 代码嵌套在列表里
+  - codehilite:    # 代码高亮，显示行号
+      guess_lang: false
+      linenums: true
+  - toc:  # 锚点
+      permalink: true
+  - pymdownx.arithmatex:  # 数学公式
+      generic: true
+  - pymdownx.betterem:  # 对加粗和斜体更好的检测
+      smart_enable: all
+#  - pymdownx.emoji:  # 表情
+#      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.magiclink  # 自动识别超链接
+  - pymdownx.tasklist:  # 复选框checklist
+      custom_checkbox: true
+
+# PDF导出插件
+plugins:
+  - search
+#  - pdf-export #这个插件还有点问题，没有更新
+
+extra_javascript:
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js
